<resources>

    <string name="app_name">Canteen Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Canteen Manager</string>
    <string name="title_activity_canteen">Canteen</string>
    <string name="title_activity_video_feed">Video Feed</string>
    <string name="title_activity_user_information">User Information</string>
    <string name="title_activity_current_order">Current Order</string>
    <string name="title_activity_progress">Progress</string>
    <string name="title_splash_screen">Splash</string>
    <string name="title_menu_list">Options</string>
    <string name="title_activity_items">Todays\'s Items</string>
    <string name="title_activity_todays_items">Today\'s Items</string>
    <string name="title_activity_cart">Cart</string>
    <string name="button_title_place_order">Place Order</string>
    <string name="default_price">Total: R 0.00</string>
    <string name="button_title_goto_cart">Go to Cart</string>
    <string name="title_activity_simulate_state_at_time">Simulate State At Times</string>
    <string name="about_text">The Canteen Manager application can be used to make purchases from the Rand Merchant Bank (currently number 1 Merchant Place) directly from your Android mobile phone. The aim for this application is to reduce the purchase time for Rand Merchant Bank personnel to make purchases at the canteen. The application can be used to view and buy products at the canteen. Funds are deducted directly from the RMB personnel\'s RMB account. Contact us @ kaileshramje@gmail.com or patrickc3832@gmail.com </string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_authentication">Login</string>
    <string name="title_activity_current_orders">Current Order/s</string>
    <string name="title_activity_order_progress">Order Progress</string>
    <string name="list_item">List Item</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="authentication_instructions">Welcome Canteen Manager for Rand Merchant Bank. You are required to make use of your RMB credentials.</string>
	<string name="username">Username</string>
	<string name="password">Password</string>
	<string name="remember_me">Remember Me</string>
	<string name="purchase">Purchase</string>
	<string name="delivery">Delivery</string>
	<string name="go_to">Go To</string>
    
</resources>